--- a/package.json
+++ b/package.json
@@ -9,8 +9,22 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "jade": "^0.29.0",
+    "mongoose": "^5.13.14",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.15",
+    "pug": "^3.0.2",
+    "readline": "^1.3.0"
+  },
+  "devDependencies": {
+    "hbs": "^4.2.0",
+    "seedgoose": "^2.0.2"
+  },
+  "seedgoose": {
+      "modelBaseDirectory": "app_server/database/models",
+      "models": ["*.js", "!db.js"],
+      "data": "data",
+      "db": "mongodb://localhost:27017/travlr"
   }
 }
