--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "name": "travlr",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-<<<<<<< Updated upstream
-    "request": "^2.88.2"
-=======
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -12,17 +15,20 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "hbs": "^4.2.0",
     "seedgoose": "^2.0.2"
   },
   "seedgoose": {
-      "modelBaseDirectory": "app_api/database/models",
-      "models": ["*.js", "!db.js"],
-      "data": "data",
-      "db": "mongodb://localhost:27017/travlr"
->>>>>>> Stashed changes
+    "modelBaseDirectory": "app_api/database/models",
+    "models": [
+      "*.js",
+      "!db.js"
+    ],
+    "data": "data",
+    "db": "mongodb://localhost:27017/travlr"
   }
 }
